[gd_scene load_steps=6 format=3 uid="uid://gvctrpct50lm"]

[ext_resource type="Script" path="res://Src/Weapons/Bullets/Bullet1.gd" id="1_uefwy"]
[ext_resource type="Texture2D" uid="uid://bkrowwqgyfdom" path="res://Assets/Bullets/Laser Sprites/10.png" id="2_c3rjg"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_62cma"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_uvivg"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_dvj2v"]
radius = 16.0312

[node name="Bullet" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_uefwy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_62cma")
scale = Vector2(0.54, 0.54)
texture = ExtResource("2_c3rjg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uvivg")
disabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 13
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dvj2v")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.5, 0)
scale = Vector2(0.95, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
